--- a/connectionstatus.ui
+++ b/connectionstatus.ui
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>130</y>
+     <x>110</x>
+     <y>110</y>
      <width>141</width>
      <height>20</height>
     </rect>
@@ -36,17 +36,30 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="finishButton">
+  <widget class="QPushButton" name="continueButton">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>130</y>
+     <x>30</x>
+     <y>140</y>
      <width>89</width>
      <height>25</height>
     </rect>
    </property>
    <property name="text">
-    <string>Finish</string>
+    <string>Continue</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="cancelButton">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>140</y>
+     <width>89</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Cancel</string>
    </property>
   </widget>
  </widget>
