--- a/player.ui
+++ b/player.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>488</width>
-    <height>398</height>
+    <height>478</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -120,7 +120,7 @@
   <widget class="QLabel" name="statusMessageLabel">
    <property name="geometry">
     <rect>
-     <x>26</x>
+     <x>170</x>
      <y>280</y>
      <width>121</width>
      <height>20</height>
@@ -130,51 +130,11 @@
     <string>Status Messages</string>
    </property>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>320</y>
-     <width>340</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <widget class="QPushButton" name="playButton">
-      <property name="text">
-       <string>Play</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="pauseButton">
-      <property name="text">
-       <string>Pause</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="nextButton">
-      <property name="text">
-       <string>Next</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="previouseButton">
-      <property name="text">
-       <string>Previous</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
   <widget class="QPushButton" name="finishButton">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>360</y>
+     <x>190</x>
+     <y>430</y>
      <width>89</width>
      <height>25</height>
     </rect>
@@ -192,6 +152,9 @@
      <height>25</height>
     </rect>
    </property>
+   <property name="readOnly">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLineEdit" name="artist">
    <property name="geometry">
@@ -201,6 +164,9 @@
      <width>321</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="readOnly">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLineEdit" name="album">
@@ -212,6 +178,9 @@
      <height>25</height>
     </rect>
    </property>
+   <property name="readOnly">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLineEdit" name="track">
    <property name="geometry">
@@ -221,6 +190,9 @@
      <width>61</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="readOnly">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLineEdit" name="year">
@@ -232,6 +204,9 @@
      <height>25</height>
     </rect>
    </property>
+   <property name="readOnly">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLineEdit" name="genre">
    <property name="geometry">
@@ -241,6 +216,9 @@
      <width>191</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="readOnly">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLineEdit" name="playcount">
@@ -252,6 +230,9 @@
      <height>25</height>
     </rect>
    </property>
+   <property name="readOnly">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLineEdit" name="songLength">
    <property name="geometry">
@@ -262,15 +243,70 @@
      <height>25</height>
     </rect>
    </property>
+   <property name="readOnly">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLineEdit" name="statusMessage">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>280</y>
-     <width>321</width>
+     <x>20</x>
+     <y>320</y>
+     <width>441</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="playButton">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>380</y>
+     <width>80</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="text">
+    <string>Play</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pauseButton">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>380</y>
+     <width>80</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Pause</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="previouseButton">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>380</y>
+     <width>80</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Previous</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="nextButton">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>380</y>
+     <width>80</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Next</string>
    </property>
   </widget>
  </widget>
